@@ -9,16 +9,38 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
+        <javafx.version>17.0.15</javafx.version>
     </properties>
 
     <dependencies>
+        <!-- FXGL 遊戲框架 -->
         <dependency>
             <groupId>com.github.almasb</groupId>
             <artifactId>fxgl</artifactId>
             <version>17</version>
         </dependency>
     </dependencies>
+
+    <build>
+    <plugins>
+        <plugin>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-maven-plugin</artifactId>
+            <version>0.0.8</version>
+            <configuration>
+                <mainClass>com.tkuimwd.Main</mainClass>
+                <options>
+                    <option>--module-path</option>
+                    <option>"C:\Program Files\Java\javafx-sdk-17.0.15\lib"</option>
+                    <option>--add-modules</option>
+                    <option>javafx.controls,javafx.fxml</option>
+                </options>
+            </configuration>
+        </plugin>
+    </plugins>
+</build>
 
 </project>
